[dependencies.http_req_wasi]
version = "0.11"

[dependencies.lazy_static]
version = "1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.urlencoding]
version = "2"

[dependencies.webhook-flows-macros]
version = "0.2"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[package]
description = "Webhook integration for flows.network"
documentation = "https://docs.rs/webhook-flows"
edition = "2021"
license = "MIT/Apache-2.0"
name = "webhook-flows"
readme = "README.md"
resolver = "1"
version = "0.4.0"
[package.metadata.docs.rs]
default-target = "wasm32-wasi"